refactor: More JDK 17 related polishing. (#729)
nocl